working proof of concept of euclidian sequencer outputting 4 gates and illuminating 6 LEDs

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,19 @@ framework = arduino
 board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m 
 lib_deps = 
+    MIDI Library
 	vortigont/LinkedList
 	ArxTypeTraits
 	khoih-prog/Functional-Vlpp@^1.0.2
-	mymenu
 	midihelpers
     parameters
+    seqlib
+    uClock
+    SimplyAtomic=https://github.com/wizard97/SimplyAtomic
+lib_extra_dirs =  
+	lib
+	C:\Users\doctea\Documents\Arduino\my_libraries
+build_flags = 
+    -DUSE_UCLOCK
+    -DENABLE_EUCLIDIAN
+    -DRP2040OutputWrapperClass=WorkshopOutputWrapper
