knob + cv input working i think, euclidian density values modulated by knobs and cv

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,19 +15,31 @@ framework = arduino
 board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m 
 lib_deps = 
+    Adafruit TinyUSB Library=https://github.com/doctea/Adafruit_TinyUSB_Arduino
     MIDI Library
 	vortigont/LinkedList
 	ArxTypeTraits
 	khoih-prog/Functional-Vlpp@^1.0.2
-	midihelpers
+	;https://github.com/doctea/midihelpers      ;; uncomment these lines if you're not me -doctea
+    ;https://github.com/doctea/parameters
+    ;https://github.com/doctea/seqlib
+    midihelpers
     parameters
     seqlib
     uClock
     SimplyAtomic=https://github.com/wizard97/SimplyAtomic
 lib_extra_dirs =  
 	lib
-	C:\Users\doctea\Documents\Arduino\my_libraries
+	C:\Users\doctea\Documents\Arduino\my_libraries  ;; comment out this line if you're not me -doctea
 build_flags = 
     -DUSE_UCLOCK
+    ;-DUSE_TINYUSB              ;; todo - sync to host device via USB MIDI
     -DENABLE_EUCLIDIAN
+    -DENABLE_PARAMETERS        
+    -DENABLE_CV_INPUT
+    -DFAST_VOLTAGE_READS
+    ;-DENABLE_ENVELOPES         ;; todo - output envelope/LFOs on the CV outputs
+    ;-DENABLE_CLOCK_INPUT_CV    ;; todo - clock input CV via the pulse inputs
     -DRP2040OutputWrapperClass=WorkshopOutputWrapper
+    ;-DENABLE_DEBUG_SERIAL
+    -DNUM_GLOBAL_DENSITY_CHANNELS=2
