ahhh, fixed the parameter input assignation fuckup

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,10 @@ board = rpipico
 framework = arduino
 board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m 
+upload_protocol = cmsis-dap
+debug_tool = cmsis-dap
+debug_speed = 10000
+upload_speed = 10000
 lib_deps = 
     Adafruit TinyUSB Library=https://github.com/doctea/Adafruit_TinyUSB_Arduino
     MIDI Library
