ok... kinda working?

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,11 +19,11 @@ debug_tool = cmsis-dap
 debug_speed = 10000
 upload_speed = 10000
 lib_deps = 
-    Adafruit TinyUSB Library=https://github.com/doctea/Adafruit_TinyUSB_Arduino
     MIDI Library
-	vortigont/LinkedList
+    Adafruit TinyUSB Library=https://github.com/doctea/Adafruit_TinyUSB_Arduino
+	khoih-prog=https://github.com/khoih-prog/Functional-Vlpp@>=1.0.2
+	LinkedList=https://github.com/vortigont/LinkedList
 	ArxTypeTraits
-	khoih-prog/Functional-Vlpp@^1.0.2
 	;https://github.com/doctea/midihelpers      ;; uncomment these lines if you're not me -doctea
     ;https://github.com/doctea/parameters
     ;https://github.com/doctea/seqlib
@@ -46,7 +46,7 @@ build_flags =
     -DENABLE_EUCLIDIAN
     -DENABLE_PARAMETERS        
     -DENABLE_CV_INPUT
-    -DFAST_VOLTAGE_READS
+    ;-DFAST_VOLTAGE_READS
     ;-DENABLE_ENVELOPES         ;; todo - output envelope/LFOs on the CV outputs
     ;-DENABLE_CLOCK_INPUT_CV    ;; todo - clock input CV via the pulse inputs
     -DRP2040OutputWrapperClass=WorkshopOutputWrapper
