not sure what i did but i think its working a lot better now?

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,3 +53,5 @@ build_flags =
     ;-DENABLE_DEBUG_SERIAL
     -DNUM_GLOBAL_DENSITY_CHANNELS=2
     -DSAMPLESET=R808
+    -DCALCULATE_SAMPLES_MODE=IN_MAIN_LOOP
+    ;-DCALCULATE_SAMPLES_MODE=IN_PROCESS_SAMPLE
