--- a/platformio.ini
+++ b/platformio.ini
@@ -46,7 +46,7 @@ build_flags =
     -DENABLE_EUCLIDIAN
     -DENABLE_PARAMETERS        
     -DENABLE_CV_INPUT
-    ;-DFAST_VOLTAGE_READS
+    -DFAST_VOLTAGE_READS
     ;-DENABLE_ENVELOPES         ;; todo - output envelope/LFOs on the CV outputs
     ;-DENABLE_CLOCK_INPUT_CV    ;; todo - clock input CV via the pulse inputs
     -DRP2040OutputWrapperClass=WorkshopOutputWrapper
