use more ComputerCard functions for pulses and LEDs -- although LEDs aren't working?!  and still crashing a lot and wobbly CV input

--- a/platformio.ini
+++ b/platformio.ini
@@ -55,4 +55,4 @@ build_flags =
     -DSAMPLESET=R808
     ;-DCALCULATE_SAMPLES_MODE=IN_MAIN_LOOP
     -DCALCULATE_SAMPLES_MODE=IN_PROCESS_SAMPLE
-    -DENABLE_SHUFFLE
+    ;-DENABLE_SHUFFLE
