--- a/platformio.ini
+++ b/platformio.ini
@@ -55,4 +55,5 @@ build_flags =
     -DSAMPLESET=R808
     ;-DCALCULATE_SAMPLES_MODE=IN_MAIN_LOOP
     -DCALCULATE_SAMPLES_MODE=IN_PROCESS_SAMPLE
-    ;-DENABLE_SHUFFLE
+    -DENABLE_SHUFFLE
+    -DSEQLIB_DISABLE_PATTERN_EUCLIDIAN_PARAMETERS
