- default to using sample interpolation because it definitely improves quality when pitch changed - default to doing sample processing in main loop (questionable whether this helps or hinders) - compile flags to enable/disable the ComputerCard filtering - general tidy up - improve disabling of USB support (via disabling USE_TINYUSB), for testing (but Audio-In-as-CV still wobbles) - add AudioWorkerLoop() callback to ComputerCard to allow descendants to do processing (eg of audio blocks) in the loop

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,7 +53,11 @@ build_flags =
     ;-DENABLE_DEBUG_SERIAL
     -DNUM_GLOBAL_DENSITY_CHANNELS=2
     -DSAMPLESET=R808
-    ;-DCALCULATE_SAMPLES_MODE=IN_MAIN_LOOP
-    -DCALCULATE_SAMPLES_MODE=IN_PROCESS_SAMPLE
+    -DCALCULATE_SAMPLES_MODE=IN_MAIN_LOOP
+    ;-DCALCULATE_SAMPLES_MODE=IN_AUDIO_WORKER
+    -DDEFAULT_INTERPOLATION_ENABLED=1
     -DENABLE_SHUFFLE
     -DSEQLIB_DISABLE_PATTERN_EUCLIDIAN_PARAMETERS
+    -DCOMPENSATE_ADC_DNL
+    -DCOMPENSATE_ADC_LPF_CV
+    -DCOMPENSATE_ADC_LPF_KNOB
