dropped samplerate + overclocking to avoid crashes in hot climates; split serial debug into separate file; add build info to debug console

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ upload_protocol = cmsis-dap
 debug_tool = cmsis-dap
 debug_speed = 10000
 upload_speed = 10000
+extra_scripts=pre:add_git_branch.py
 lib_deps = 
     MIDI Library
     Adafruit TinyUSB Library=https://github.com/doctea/Adafruit_TinyUSB_Arduino
